force-app/main/default/objects/AWS_Exception__c/AWS_Exception__c.object-meta.xml
<CustomObject>
    <label>AWS Exception</label>
    <nameField>
        <displayFormat>EXP - {000000}</displayFormat>
        <label>Exception #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AWS Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>