force-app/main/default/objects/AWS_Exception__c/fields/FileId__c.field-meta.xml
<CustomField>
    <fullName>FileId__c</fullName>
    <label>File Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>