force-app/main/default/objects/AWS_Exception__c/fields/FileTitle__c.field-meta.xml
<CustomField>
    <fullName>FileTitle__c</fullName>
    <label>File Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>