force-app/main/default/objects/AWS_Exception__c/fields/FileUrl__c.field-meta.xml
<CustomField>
    <fullName>FileUrl__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;+ FileId__c ,  FileTitle__c , &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>File Url</label>
    <type>Text</type>
</CustomField>