force-app/main/default/objects/AWS_Exception__c/fields/RecordUrl__c.field-meta.xml
<CustomField>
    <fullName>RecordUrl__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;+  RecordId__c , &quot;Parent Record&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Url</label>
    <type>Text</type>
</CustomField>