force-app/main/default/objects/AWS_Exception__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <label>Resource</label>
    <type>TextArea</type>
</CustomField>