force-app/main/default/objects/AWS_Exception__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ErrorCode__c</columns>
    <columns>FileUrl__c</columns>
    <columns>RecordUrl__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>